--- a/BANK-APP/src/main/resources/templates/home.html
+++ b/BANK-APP/src/main/resources/templates/home.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+<div th:fragment="navbar">
 
 <div class="row justify-content-center mt-3">
 
@@ -84,6 +85,7 @@
 
     </div>
 
+</div>
 </div>
 
 
