--- a/BANK-APP/src/main/resources/templates/dash.html
+++ b/BANK-APP/src/main/resources/templates/dash.html
@@ -13,7 +13,6 @@
 <!--    <title>DashBoard</title>-->
 <!--</head>-->
 <!--<body>-->
-
 <!--<style>-->
 <!--    *{-->
 <!--        margin: 0px;-->
@@ -147,7 +146,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-
 </head>
 <body>
 <nav class="navbar navbar-expand-lg">
@@ -184,7 +182,9 @@
             </ul>
         </div>
     </div>
+
 </nav>
+<!--joining homepage and nav bar-->
 <div th:replace="home :: navbar">
 
 </div>
