--- a/BANK-APP/src/main/resources/templates/home.html
+++ b/BANK-APP/src/main/resources/templates/home.html
@@ -1,7 +1,6 @@
 
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,66 +12,38 @@
             integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
             crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-
 </head>
-
 <body>
+<!--the dashboard page has 2 fragments 1 is the upperportion navigation bar, and the other is a body-->
 <div th:fragment="navbar">
-
 <div class="row justify-content-center mt-3">
-
     <div class="col-lg-5 col-sm-12">
-
         <div class="row justify-content-between">
-
             <div class="col-lg-7 col-md-8 col-sm-12 bg-dark text-center text-light card p-2 rounded-4 shadow-lg">
-
-                <img class="d-block card-img w-100" th:src="@{/images/mobile-banking.jpg}"  height="100px" width="80px" />
-
+                <img class="d-block card-img w-100" th:src="@{/images/mobilebanking.jpg}"  height="100px" width="80px" />
                 <h3 class="card-title">Hassle-free Mobile Banking</h3>
-
                 <div class="card-body">
-
                     <p>Experience hassle free mobile banking offered by Origin bank</p>
-
                 </div>
-
             </div>
-
             <div class="col-lg-4 col-sm-12 bg-dark text-center text-light card p-2 rounded-4 shadow-lg">
-
-                <img class="d-block card-img w-100 " th:src="@{/images/old-age.jpg}"  height="100px" width="80px" />
+                <img class="d-block card-img w-100 " th:src="@{/images/services.jpg}"  height="100px" width="80px" />
                 <h3 class="card-title">Importance to Senior citizen!!</h3>
-
                 <div class="card-body">
-
                     <p>Complex free banking offered by Origin bank to Senior citizen's</p>
-
                 </div>
-
             </div>
-
             <div class="col-lg-12 mt-1 bg-dark text-center text-light card p-2 rounded-4 shadow-lg">
-
-                <img class="d-block card-img w-100" th:src="@{/images/car-loan.jpg}" height="100px" width="80px" />
-
+                <img class="d-block card-img w-100" th:src="@{/images/carloan.jpg}" height="100px" width="80px" />
                 <h3 class="card-title">Hassle-free Car Loans!!</h3>
-
                 <div class="card-body">
-
                     <p>Get a Car loan with ease of request offered by Origin bank</p>
                 </div>
-
             </div>
-
         </div>
-
     </div>
-
     <div class="col-6">
-
         <img th:src="@{/images/Origin-Bank1.jpg}" height="50%" width="100%" class="rounded-4">
-
         <div class=" mt-4">
             <marquee width="100%" direction="up" bgcolor="#00004F" class=" p-2 rounded-3 text-light">
                 Origin Bank operates as a full service bank!!<br> The Company offers banking products and services such as savings accounts,<br>
@@ -81,16 +52,10 @@
                 debit and credit cards,<br> business and personal loans, mortgages, cash management, line of credit, online banking, and e-statements.
             </marquee>
         </div>
-
-
     </div>
-
 </div>
 </div>
-
-
 </body>
-
 </html>
 
 
