--- a/BANK-APP/src/main/resources/templates/login.html
+++ b/BANK-APP/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <style>
         form {
-            /*background-image: url("images/financial-banking.avif");*/
+            /*background-image: url("images/services.jpg");*/
         }
         #logo{
             width:70px;
@@ -21,27 +21,35 @@
             width:600px;
             max-height: 300px;
         }
+        .required::after{
+            content: "*";
+            color: red;
+        }
     </style>
 
 <script>
-    $(document).ready(()=> {
-
-        $("#submit").click(() => {
-            // username = $("input[name=username]").val()
-            // password = $("input[name=password]").val()
-            // alert(username)
-            // alert(password)
-            $.post('http://localhost:8086/rest/authenticate',{username:$("input[name=username]").val(),password:$("input[name=password]").val()},
-                function(response){
-                    if(response == "Success"){
-                        window.location.href="http://localhost:8086/web/dash";
-                    }
-                    else {
-                        alert(response)
-                    }
-                });
-        });
-    });
+    $(document).ready(function () {
+        $("#submit").click(()=>{
+            const username = $("input[name=username]").val();
+            // alert(username);
+            // loggers.info(username);
+            var Validation=function(){
+                Username=username.value.trim();
+                validName=/^[A-Za-z]+$/;
+                firstNameErr=document.getElementById('name-err');
+                firstNameErr.innerHTML="First Name is required";
+                if(!validName.test(Username)){
+                    firstNameErr.innerHTML="First Name must be only string without white spaces";
+                }else{
+                    firstNameErr.innerHTML="";
+                    return true;
+                }
+            }
+            username.oninput=function(){
+                Validation();
+            }
+        })
+    })
 
 </script>
 
@@ -63,25 +71,30 @@
 <!--        });-->
 
 </head>
-
+<!---->
 <body class="bg-light">
 <div class="container">
     <div class="row justify-content-center text-light bg-dark rounded-4 mt-3 col-lg-12 col-md-8 col-sm-12">
-        <h1 class="text-center" > <img id="logo" th:src="@{/files/download.png}" class="p-2" /> ORIGIN BANK</h1>
+        <h1 class="text-center" > <img id="logo" th:src="@{/images/dash.jpg}" class="p-2" /> ORIGIN BANK</h1>
     </div>
     <div class="row">
         <div class=" col-lg-5 col-md-8 col-sm-12">
-            <form name="login" class="bg-dark rounded-4 mt-4 p-4 ">
+            <form name="login" class="bg-dark rounded-4 mt-4 p-4 " th:action="@{/web/log}" method="post">
                 <h2 class="fw-bold mb-2 text-uppercase text-light">Login</h2>
                 <p class="text-white-50 mb-2">Please enter your User Name and password</p>
-                <div class="form group">
-                    <label class="text-light">User Name <span id="errid"></span></label>
-                    <input type="text" id="username" name="username" class="form-control" />
+                <div class="form group" id="loginForm" >
+                    <label class="text-light required">User Name </label>
+                    <input type="text" name="username" class="form-control" required/>
+                    <div id="name-err"></div>
                 </div>
                 <div class="form group mt-2">
-                    <label class="text-light">Password </label>
-                    <input type="password" id="password" name="password" class="form-control" />
+                    <label class="text-light required">Password </label>
+                    <input type="password" name="password" class="form-control" required/>
                 </div>
+                <div th:if="${param.error}">
+                    <p class="text-danger">[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]</p>
+                </div>
+<!--                adding radio buttons for selecting the options as official or admin-->
                 <div class="mt-2 p-2 text-light" >
                     <input type="radio" id="admin" name="role" value="admin">
                     <label for="admin">Admin</label>
@@ -91,9 +104,11 @@
                 <div class="mt-2 row justify-content-around">
                     <p class="mb-1 pb-lg-1"><a class="text-white-50" href="#!">Forgot password?</a></p>
                     <div class="mt-2 p-3 row justify-content-between">
-                        <button class="col-3 btn btn-outline-success" id="submit" type="button">
+<!--                        submit button-->
+                        <button class="col-3 btn btn-outline-success" id="submit" type="submit">
                             <i class="bi bi-box-arrow-in-right"></i>
                         </button>
+<!--                        reset button-->
                         <button class="col-3 btn btn-outline-info" type="reset">
                             <i class="bi bi-x-circle-fill"></i>
                         </button>
@@ -102,6 +117,7 @@
 
             </form>
         </div>
+<!--        carousels where added-->
         <div class=" col-lg-7 col-md-8 col-sm-12 mt-3 rounded-4 ">
             <div class="carousel slide rounded-4" data-bs-ride="carousel">
                 <div class="carousel-indicators">
@@ -109,17 +125,16 @@
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
                 </div>
+<!--                different images to added to carousel-->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img th:src="@{/images/digital-finance.jpg}" >
-
                     </div>
                     <div class="carousel-item">
-                        <img th:src="@{/images/financial-banking.avif}" >
-
+                        <img th:src="@{/images/mobilebanking.jpg}" >
                     </div>
                     <div class="carousel-item">
-                        <img th:src="@{/images/origin.jpg}" class="d-block w-100" >
+                        <img th:src="@{/images/origin.png}" class="d-block w-100" >
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
@@ -131,13 +146,11 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
-
             <marquee width="100%" behavior="scroll" direction="up" bgcolor="#00004F" class="mt-3 p-2 rounded-3 text-light">
                 Origin Bank operates as a full service bank!!<br> The Company offers banking products and services such as savings accounts,<br>
                 debit and credit cards,<br> business and personal loans, mortgages, cash management, line of credit, online banking, and e-statements.
             </marquee>
         </div>
-
     </div>
 </div>
 </body>
