--- a/BANK-APP/src/main/resources/templates/home.html
+++ b/BANK-APP/src/main/resources/templates/home.html
@@ -19,6 +19,7 @@
 <div class="row justify-content-center mt-3">
     <div class="col-lg-5 col-sm-12">
         <div class="row justify-content-between">
+<!--            mobile banking image-->
             <div class="col-lg-7 col-md-8 col-sm-12 bg-dark text-center text-light card p-2 rounded-4 shadow-lg">
                 <img class="d-block card-img w-100" th:src="@{/images/mobilebanking.jpg}"  height="100px" width="80px" />
                 <h3 class="card-title">Hassle-free Mobile Banking</h3>
@@ -26,6 +27,7 @@
                     <p>Experience hassle free mobile banking offered by Origin bank</p>
                 </div>
             </div>
+<!--            left side of the screen-->
             <div class="col-lg-4 col-sm-12 bg-dark text-center text-light card p-2 rounded-4 shadow-lg">
                 <img class="d-block card-img w-100 " th:src="@{/images/services.jpg}"  height="100px" width="80px" />
                 <h3 class="card-title">Importance to Senior citizen!!</h3>
