--- a/BANK-APP/src/main/resources/templates/login.html
+++ b/BANK-APP/src/main/resources/templates/login.html
@@ -9,152 +9,138 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+
     <style>
-        form {
-            /*background-image: url("images/services.jpg");*/
+        /*styling the main body*/
+        body {
+            background-color: lavender;
+            background-repeat: no-repeat;
+            background-size: cover;
         }
+        form {
+            background-image: url("../static/images/services.jpg");
+        }
+        /*set height and width for the logo at the top*/
         #logo{
             width:70px;
             max-height: 70px;
         }
+        /*set height and width for the image*/
         img{
             width:600px;
             max-height: 300px;
         }
-        .required::after{
-            content: "*";
+        /*to indicate the compulsory entered field */
+        .required:after {
+            content:" *";
             color: red;
+
         }
     </style>
+    <!-- script to validate the login function-->
+    <script>
+        $(document).ready(()=> {
+            $('#username').on('input', function () {
+                console.log("Entered the valid username");
+                var username = $(this).val();
+                var validUserName = /^[a-zA-Z]{5,}$/ ;
+                if (username.length === 0) {
+                    $('.user').addClass('invalid-msg').text("Username is required!!");
+                    $(this).addClass('invalid-input').removeClass('valid-input');
 
-<script>
-    $(document).ready(function () {
-        $("#submit").click(()=>{
-            const username = $("input[name=username]").val();
-            // alert(username);
-            // loggers.info(username);
-            var Validation=function(){
-                Username=username.value.trim();
-                validName=/^[A-Za-z]+$/;
-                firstNameErr=document.getElementById('name-err');
-                firstNameErr.innerHTML="First Name is required";
-                if(!validName.test(Username)){
-                    firstNameErr.innerHTML="First Name must be only string without white spaces";
-                }else{
-                    firstNameErr.innerHTML="";
-                    return true;
+                } else if (!validUserName.test(username)) {
+                    $('.user').addClass('invalid-msg').text('Username must atleast have 5 characters.');
+                    $(this).addClass('invalid-input').removeClass('valid-input');
                 }
-            }
-            username.oninput=function(){
-                Validation();
-            }
+                else {
+                    $('.user').empty();
+                    $(this).addClass('valid-input').removeClass('invalid-input');
+                }
+            });
+
+            $('#password').on('input', function () {
+                console.log("Entered the valid password");
+                var password = $(this).val();
+                var validPassword = /^[a-z]{4,}[0-9]{2,}$/;
+                if (password.length === 0) {
+                    $('.password').addClass('invalid-msg').text("Password is required!!");
+                    $(this).addClass('invalid-input').removeClass('valid-input');
+
+                } else if (!validPassword.test(password)) {
+                    $('.password').addClass('invalid-msg').text('Password must contain atleast 4 characters and 2 numbers!');
+                    $(this).addClass('invalid-input').removeClass('valid-input');
+
+                } else {
+                    $('.password').empty();
+                    $(this).addClass('valid-input').removeClass('invalid-input');
+                }
+            });
         })
-    })
-
-</script>
-
-<!--    <script>-->
-<!--        $(document).ready(()=>{-->
-<!--            $("#submit").click(()=>{-->
-<!--                $.post('http://localhost:8086/rest/authenticate',{-->
-<!--                    userName:$("#username").val(),-->
-<!--                    password:$("#password").val()-->
-<!--                }, function(response) {-->
-<!--                    if(response=="Success"){-->
-<!--                        alert(response);-->
-<!--                        window.location.href="http://localhost:8086/web/dash";-->
-<!--                    }-->
-<!--                    else-->
-<!--                        alert(response);-->
-<!--                });-->
-<!--            });-->
-<!--        });-->
-
+    </script>
 </head>
-<!---->
-<body class="bg-light">
+
+<body>
 <div class="container">
+    <!-- to display the main heading at the top along with the bank logo-->
     <div class="row justify-content-center text-light bg-dark rounded-4 mt-3 col-lg-12 col-md-8 col-sm-12">
-        <h1 class="text-center" > <img id="logo" th:src="@{/images/dash.jpg}" class="p-2" /> ORIGIN BANK</h1>
+        <h1 class="text-center" > <img id="logo" th:src="@{/images/origin.png}" class="p-2" /> ORIGIN BANK</h1>
     </div>
+    <!-- we divide the whole page as a single row-->
     <div class="row">
+        <!-- consider the first column-->
         <div class=" col-lg-5 col-md-8 col-sm-12">
-            <form name="login" class="bg-dark rounded-4 mt-4 p-4 " th:action="@{/web/log}" method="post">
-                <h2 class="fw-bold mb-2 text-uppercase text-light">Login</h2>
-                <p class="text-white-50 mb-2">Please enter your User Name and password</p>
-                <div class="form group" id="loginForm" >
-                    <label class="text-light required">User Name </label>
-                    <input type="text" name="username" class="form-control" required/>
-                    <div id="name-err"></div>
+            <!-- making of the login form-->
+            <form name="login" th:action="@{/web/log}" onsubmit="return validateForm()" method="post" id="validation" class="bg-dark rounded-4 mt-4 p-4 ">
+                <h2 class="fw-bold mb-2 text-uppercase text-light"><center>Login</center></h2>
+                <h4 class="text-white-50"><center>Bank Admin/ Bank Official Login</center></h4>
+                <p class="text-white-50 mb-2">Please enter your Username and Password</p>
+                <!-- take username as input from the user-->
+                <div class="form group">
+                    <label class="required text-light">User Name <span id="errid"></span></label>
+                    <input type="text" id="username" name="username" class="form-control" required/>
+                    <p class="user text-danger"></p>
                 </div>
+                <!-- take the password from the user-->
                 <div class="form group mt-2">
-                    <label class="text-light required">Password </label>
-                    <input type="password" name="password" class="form-control" required/>
+                    <label class="required text-light">Password <span id="errpassword"></span></label>
+                    <input type="password" id="password" name="password" class="form-control" required/>
+                    <p class="password text-danger"></p>
                 </div>
                 <div th:if="${param.error}">
                     <p class="text-danger">[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]</p>
                 </div>
-<!--                adding radio buttons for selecting the options as official or admin-->
-                <div class="mt-2 p-2 text-light" >
-                    <input type="radio" id="admin" name="role" value="admin">
-                    <label for="admin">Admin</label>
-                    <input type="radio" id="bank" name="role" value="bankOfficial">
-                    <label for="bank">Bank Official</label>
-                </div>
                 <div class="mt-2 row justify-content-around">
-                    <p class="mb-1 pb-lg-1"><a class="text-white-50" href="#!">Forgot password?</a></p>
+                    <!-- two buttons for submit and reset.-->
                     <div class="mt-2 p-3 row justify-content-between">
-<!--                        submit button-->
                         <button class="col-3 btn btn-outline-success" id="submit" type="submit">
-                            <i class="bi bi-box-arrow-in-right"></i>
+                            <i class="bi bi-box-arrow-in-right"></i> LOGIN
                         </button>
-<!--                        reset button-->
                         <button class="col-3 btn btn-outline-info" type="reset">
-                            <i class="bi bi-x-circle-fill"></i>
+                            <i class="bi bi-bootstrap-reboot"></i> RESET
                         </button>
                     </div>
                 </div>
 
             </form>
         </div>
-<!--        carousels where added-->
         <div class=" col-lg-7 col-md-8 col-sm-12 mt-3 rounded-4 ">
             <div class="carousel slide rounded-4" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                </div>
-<!--                different images to added to carousel-->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img th:src="@{/images/digital-finance.jpg}" >
-                    </div>
-                    <div class="carousel-item">
+                        <!-- The main image -->
                         <img th:src="@{/images/mobilebanking.jpg}" >
                     </div>
-                    <div class="carousel-item">
-                        <img th:src="@{/images/origin.png}" class="d-block w-100" >
-                    </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
             </div>
+            <!-- Details of the bank provided within marquee-->
             <marquee width="100%" behavior="scroll" direction="up" bgcolor="#00004F" class="mt-3 p-2 rounded-3 text-light">
                 Origin Bank operates as a full service bank!!<br> The Company offers banking products and services such as savings accounts,<br>
                 debit and credit cards,<br> business and personal loans, mortgages, cash management, line of credit, online banking, and e-statements.
             </marquee>
         </div>
+
     </div>
 </div>
 </body>
 </html>
-
-
 
